--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
 #spring.http.multipart.max-file-size=20MB
 #spring.http.multipart.max-request-size=20MB
 server.port=8080
+server.tomcat.uri-encoding=UTF-8
 #
-#springboot\u5C55\u793A\u56FE\u7247:\u9879\u76EE\u6620\u5C04\u5230\u672C\u5730\u5730\u5740
+#springboot\u5C55\u793A\u56FE\u7247:\u9879\u76EE\u6620\u5C04\u5230\u672C\u5730\u5730\u5740***********************
 #\u9879\u76EE\u8DEF\u5F84
 IMG_HTTP_PATH=/images/**
 #\u6620\u5C04\u5230\u672C\u5730\u8DEF\u5F84:\u524D\u9762\u5FC5\u987B\u52A0file
